<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/neededComponentsFragment"
        android:icon="@drawable/ic_action_buy"
        android:title="@string/buy" />

    <item
        android:id="@+id/historyAllFragment"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/history" />

    <item
        android:id="@+id/popularComponentsFragment"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/popular" />
</menu>