<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.sergeyrodin.matchesboxes.history.all.HistoryAllViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".history.all.HistoryAllFragment">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/display_history_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/list_margin"
            app:displayHistoryListData="@{viewModel.historyItems}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="@dimen/no_items_text_size"
            android:text="@string/no_history"
            app:noDataTextVisible="@{viewModel.noHistoryTextVisible}" />

    </FrameLayout>
</layout>