...
                android:text="@{viewModel.details.componentName}"
                android:textSize="@dimen/details_name_text_size"
                app:layout_constraintBottom_toTopOf="@+id/quantity_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/box_name"
                tools:text="Component" />

            <TextView
                android:id="@+id/quantity_text"
                android:layout_width="@dimen/quantity_width"
                android:layout_height="wrap_content"
                android:hint="@string/quantity_hint"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/quantity_text" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/edit_component_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            app:srcCompat="@drawable/ic_edit"
            android:onClick="@{() -> viewModel.editComponent()}"
            app:fabSize="normal"
...
